# The-Lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  Brewfile  CONTRIBUTING.md  GET_STARTED.md  PUSH_TO_GITHUB.md  README.md  SETUP_COMPLETE.md  TRANSFORMATION_COMPLETE.md  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json  push.sh  setup.sh
.githooks/: pre-commit
.github/workflows/: apple-ci.yml  ci.yml
Apps/TraderMac/: project.yml
Apps/TraderMac/Sources/: App.swift
Apps/TraderMac/TraderMac.xcodeproj/: project.pbxproj
Apps/TraderiOS/: project.yml
Apps/TraderiOS/Sources/: App.swift
apps/android/: App.tsx  app.json  package.json
apps/android/android/: settings.gradle
apps/apple/: .gitignore  .swiftformat  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  TRANSFORMATION_SUMMARY.md  project.yml
apps/ios/: ContentView.swift  TheLabApp.swift
apps/mobile/: GET_STARTED.md  QUICK_REFERENCE.md  README.md  app.json  package.json  tsconfig.json
docs/: AI_GUIDE.md  DEPLOYMENT.md  MOBILE.md  QUICK_START.md  VIBE_CODING_GUIDE.md
gateway/rust/: Cargo.toml  build.rs
gateway/rust/src/: main.rs
gateway/rust/src/pb/: trading.v1.rs
northstar/: README.md
prisma/: schema.prisma
proto/: buf.gen.yaml  buf.yaml
scripts/: bootstrap.sh  generate_protos.sh  xcodegen.sh
src/app/: layout.tsx
src/lib/: ai.ts  email.ts
web/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
web/app/: layout.tsx  page.tsx
web/components/: Chart.tsx
(+85 files in other folders)
